# claude_code_pet

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md
asset_pipeline/qingyun/: README.md  convert_qingyun_assets.py
docs/: ai-hooks-guide.md  arduino-ide-guide.md  art-asset-self-service-guide.md  art-generation-prompts.md  evolution-sprite-pipeline.md  hardware-bringup.md  qingyun-asset-pipeline.md  v1.2-acceptance.md
firmware/ai_pet/: ai_event_protocol.cpp  ai_event_protocol.h  ai_pet.ino  board_config.h  button_scanner.cpp  button_scanner.h  chinese_text.cpp  chinese_text.h  diagnostics_app.cpp  diagnostics_app.h  display_device.cpp  display_device.h  flash_probe.cpp  flash_probe.h  game_app.cpp  game_app.h  game_state.cpp  game_state.h  game_types.h  game_ui.cpp  game_ui.h  input_actions.h  pet_renderer.cpp  pet_renderer.h  region_config.cpp  region_config.h  save_store.cpp  save_store.h
host/: requirements-dev.txt
host/diagnostics/: serial_acceptance.py  test_serial_acceptance.py
host/game_model/: ai_protocol.py  progression.py  test_ai_protocol.py  test_progression.py  test_ui_refresh.py
host/hooks/: ai_pet_hook.py  claude-hook.ps1  codefree-o-hook.ps1  codefree-o-plugin.js  codex-hook.ps1  hook_state.py  opencode-hook.ps1  (+3 more)
scripts/: bootstrap-arduino.ps1  compile-firmware.ps1  convert_background.py  convert_button_icons.py  convert_pet_effects.py  convert_pet_sprites.py  convert_qingyun_assets.py  convert_qingyun_boss.py  convert_ui_icons.py  convert_v12_assets.py  install-ai-hooks.ps1  upload-firmware.ps1
simulator/: CMakeLists.txt
simulator/src/: main.cpp  sim_config.h
simulator/src/backend/: input_manager.cpp  input_manager.h  sdl_renderer.cpp  sdl_renderer.h
simulator/src/overrides/: button_scanner_sim.cpp  display_device_sim.cpp  save_store_sim.cpp
simulator/src/shims/: Adafruit_GFX.cpp  Adafruit_GFX.h  Adafruit_ST7735.cpp  Adafruit_ST7735.h  Arduino.cpp  Arduino.h  FS.h  GFXcanvas.cpp  GFXcanvas.h  HardwareSerial.cpp  HardwareSerial.h  LittleFS.cpp  LittleFS.h  Print.cpp  Print.h  SPI.h  U8g2_for_Adafruit_GFX.cpp  U8g2_for_Adafruit_GFX.h  WString.cpp  WString.h  chinese_text_sim.cpp
(+57 files in other folders)
